--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,16 @@
 <resources>
     <string name="app_name">GeoQuiz</string>
-    <string name="question_text">Canberra is the capital of Australia.</string>
+
+    <string name="question_australia">Canberra is the capital of Australia.</string>
+    <string name="question_africa">The source of the Nile River is in Egypt.</string>
+    <string name="question_americans">The Amazon River is the longest river in the Americans.</string>
+
     <string name="true_button">True</string>
     <string name="false_button">False</string>
-    <string name="correct_toast">Correct!</string>re
+    <string name="next_button">Next</string>
+    <string name="prev_button">Prev</string>
+
+    <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
+
 </resources>
