Task-4. Implement cheat activity, show sdk version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
 
     <string name="warning_text">Are you sure you want to do this?</string>
 
+    <string name="sdk_version">API version:</string>
+
 </resources>
